--- a/package.json
+++ b/package.json
@@ -1,30 +1,15 @@
 {
-  "name": "express-locallibrary-tutorial",
-  "version": "0.0.0",
-  "engines": {
-    "node": "12.18.4"
-  },
-  "private": true,
+  "name": "simple-calculator",
+  "version": "1.0.0",
+  "description": "Demo web app running on EC2",
+  "main": "calculator.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "buraku",
+  "license": "MIT-0",
   "dependencies": {
-    "async": "^3.2.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "express-validator": "^6.6.1",
-    "helmet": "^4.1.1",
-    "http-errors": "~1.6.3",
-    "luxon": "^1.25.0",
-    "mongoose": "^5.10.7",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
+    "express": "^4.17.1",
+    "pm2": "^4.5.0"
   }
 }
